test/files/neg/t4158.scala
class A {
  var x: Int = null
  var y = null: Int
}